package othello.fx;

public interface Observateur {
    public void reagir();
}