package othello.fx;

public interface Scene {
    public void afficherMenu();
    public void afficherPartie();
    public void afficherFinPartie();
    public void afficherPasseTour();
}
